# movie-database-qa

./: .gitignore  main.py  pyproject.toml
movie_database_qa/: log.py  main.py  tmdb_functions.py
movie_database_qa/from_scratch/: llm_with_tools.py  math_tools.py  prompt.py  tmdb_tools.py
movie_database_qa/with_langchain/: callbacks.py  llm_with_langchain_tools.py  tmdb_tools.py
src/: chat_bot.py  llm_with_langchain_tools.py  llm_with_tools.py  main.py  math_tools.py  prompts.py  tmdb_functions.py  tmdb_tools.py  tool.py  ui.py
src/from_scratch/: llm_with_tools.py  math_tools.py  prompt.py  tmdb_tools.py  tool.py
src/with_langchain/: callbacks.py  llm_with_langchain_tools.py  prompt.py  tmdb_tools.py
tests/: test_llm_with_tools.py
